# ai-tiddy-bear-v2

./: .dockerignore  .env  .env.example  .env.example.secure  .env.production.template  .flake8  .gitignore  .pre-commit-config.yaml  1.py  234.py  66.py  ADVERSARIAL_PRODUCTION_AUDIT_REPORT.md  ADVERSARIAL_SECURITY_AUDIT_DETAILED.md  AGENT.md  ARCHITECTURE.md  ARCHITECTURE_ISSUES.md  BLOCKERS.md  CLAUDE.md  CLEANUP_PLAN.md  COMPREHENSIVE_AUDIT_REPORT.md  DOCKER_SECURITY_FIX_DOCUMENTATION.md  Dockerfile  Dockerfile.production  FINAL_REFACTORING_REPORT.md  JUNK_ANALYSIS.md  MIGRATION_GUIDE.md  PRODUCTION_FIX_STATUS.md  PRODUCTION_HARDENING_STATUS.md  PROJECT_AUDIT_REPORT.md  PROJECT_ISSUES_REPORT.md  README.md  REFACTORING_REPORT.md  ROUTER_DEPENDENCY_STATUS.md  SECURITY_FIX_REPORT.md  SECURITY_REFACTORING_REPORT.md  SECURITY_VERIFICATION_SUMMARY.md  SECURITY_VULNERABILITIES_RESOLVED.md  SERVICES_REFACTORING_REPORT.md  STEP6_ENDPOINT_TESTING_TABLE.md  STEP6_HTTP_INTEGRATION_TESTING_REPORT.md  (+108 more)
.amazonq/rules/: iterative_problem_check.md
.claude/: settings.local.json
.cursor/rules/: codacy.mdc
.github/: copilot-instructions.md
.github/workflows/: dummy-code-check.yml  security-scan.yml
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
cleanup_audit/: 2025-07-23_cleanup_report.md  auth_comparison_matrix.md  dependency_map.md  emergency_report.md  risk_assessment.md  vulture_report.txt
config/: .env.example  .env.template  .flake8  .pre-commit-config.yaml  api_keys.json.example  default_schema.json  default_schema_new.json  mypy.ini  setup.cfg
config/environments/: development.json  production_config.json  staging_config.json
config/schemas/: application.json  audio_processing.json  common_definitions.json  content_moderation.json  database.json  development.json  feature_flags.json  integrations.json  interaction_limits.json  llm_settings.json  logging_config.json  monitoring.json  parental_controls.json  performance_settings.json  privacy_compliance.json  security.json  server.json  streaming_settings.json  voice_settings.json
config/tests/: pytest.ini
docs/security/: EMERGENCY_PATH_TRAVERSAL_ANALYSIS.md  EMERGENCY_SECURITY_FIXES_COMPLETED.md
docs/test_fixes/: final_push.md  missing_modules_analysis.md  mission_complete.md  phase2_security_progress.md  phase3_syntax_fixes.md  phase3a_syntax_fixes.md  technical_debt.md
issues_batches/: issues_batch1.md  issues_batch10.md  issues_batch11.md  issues_batch12.md  issues_batch13.md  issues_batch14.md  issues_batch15.md  issues_batch16.md  issues_batch17.md  issues_batch18.md  issues_batch19.md  issues_batch2.md  issues_batch3.md  issues_batch4.md  issues_batch5.md  issues_batch6.md  issues_batch7.md  issues_batch8.md  issues_batch9.md
md/: COMPLETE_PROJECT_DISCOVERY_REPORT.md  FILES_STATUS_REPORT.md  INDEX.md  QUICK_START_GUIDE.md  URGENT_FIX_PLAN.md
migrations/: env.py  script.py.mako
migrations/versions/: 20250111_1500_001_initial_production_schema.py
monitoring/: prometheus.yml
monitoring/alerts/: child-safety.yml
nginx/: production.conf
patches/: cosmetic_issue_16.patch  critical_issue_1.patch  critical_issue_2.patch  critical_issue_3.patch  critical_issue_4.patch  critical_issue_5.patch  major_issue_10.patch  major_issue_6.patch  major_issue_7.patch  major_issue_8.patch  major_issue_9.patch  minor_issue_12.patch  minor_issue_13.patch  minor_issue_14.patch
report/: CHANGELOG.md  Summary_Table.md
reports/: class_usage_report.md  classes_progress_report.md  coppa_service_fix_report.md  dependency-security-report.json  detailed_usage_report.md  duplicate_classes_report.md  duplicate_functions_report.md
scripts/: Validate-Security.ps1  check_user_dict_usage.py  deploy-production.sh  manage_dependencies.py  test_runtime_security.sh  validate_jwt_security.py  validate_security.sh  validate_vault_startup.py
scripts/ci/: check_no_dummy_code.sh
scripts/development/: api_structure_generator.py  chatgpt_complete_api.py  chatgpt_integration.py  create_chatgpt_api_fixed.py  fix_imports.py  implement_real_functionality.py  run_chatgpt_api.py  security_hardening_tool.py
scripts/security/: dependency-check.py  deploy-validator.py  generate-lock-file.py  license-compliance.py  update-dependencies.py
scripts/setup/: setup_testing_infrastructure.py
scripts/testing/: performance_benchmark.py  run_comprehensive_tests.py  run_tests.py  simple_test_runner.py  test_chatgpt_integration.py  test_real_functionality.py  validate_improvements.py  verify_dependencies.py
scripts/utilities/: 66.py
sql/: init-production.sql
src/: 66.py  CORE_FEATURES_TEST.py  CORE_FEATURES_TEST_RESULTS.json  check_syntax.py  deadcode_report.txt  errors.txt  main.py
src/application/: __init__.py  exceptions.py
src/common/: constants.py  container.py  exceptions.py  exceptions_all_tmp.py
src/domain/: __init__.py  analytics.py  constants.py  contracts.py  schemas.py  value_objects.py
src/presentation/: __init__.py  (+1 more)
tests/: TESTING_GUIDE.md  ai_test_generator.py  comprehensive_testing_framework.py  conftest.py  contract_tests.py  debug_uuid_freezegun.py  final_test.py  mutation_tests.py  run_tests.py  security_validation_test.py  simple_sanity_check.py  test_ai_safety_system.py  test_backward_compatibility.py  test_basic_functionality.py  test_basic_working.py  test_bias_detection.py  test_child_aggregate.py  test_child_repository.py  test_clean_container.py  test_consent_service_real.py  test_container.py  test_content_moderator.py  test_coppa_configuration.py  test_database_validator_security.py  test_distributed_processor.py  test_edge_ai_manager.py  test_emotion_analyzer.py  test_event_sourced_child_profile.py  test_exception_handling.py  test_homomorphic_encryption.py  test_integration.py  test_jwt_security_validator.py  test_main.py  test_main_real.py  test_multi_layer_cache.py  test_no_mock_services.py  test_postgresql_session_manager.py  test_security_solutions.py  test_session_manager.py  test_simple.py  (+2 more)
text/: lines_over_20_words.txt  long_lines.txt  one_line_files.txt  starts_with_triple_quote.txt
(+936 files in other folders)
